--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
+/* variables */
+:root{
+  --primary: #63776f;
+  --secondary: #156453;
+}
+
+/* reset */
+body,p,a,ul,li{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+li{
+  list-style-type: none;
+}
+
+/* base styles */
+body{
+  background: var(--secondary);
+  overflow-x: hidden;
+}
+.button{
+  background: none;
+  border: 2px solid var(--primary);
+  color: #fff;
+  padding: 6px 12px;
+  border-radius: 10px;
+  text-transform: uppercase;
+  box-shadow: 1px 2px 3px rgba(0,0,0,0.6);
+  display: inline-block;
+  font-size: 1em;
+  margin-left: 5px;
+}
+.button:hover{
+  color: #222;
+  background: var(--primary);
+}
+input{
+  background: rgba(255,255,255,0.05);
+  padding: 10px 16px;
+  border-radius: 10px;
+  border: 2px solid #63776f;
+  color: #f2f2f2;
+  font-size: 1em;
+}
+
+/* fonts */
+body{
+  color: #f2f2f2;
+}
+
+/* mobile styles */
+.App{
+  margin: 5%;
+}
+.form{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid{
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 10px;
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todos{
+  margin-top: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todos li{
+  margin-top: 10px;
+  background-color: #ab6776;
+  padding: 2%;
+  box-shadow: 1px 2px 3px honeydew;
+  cursor: pointer;
+  font-size: 30px;
+}
+.content{
+  grid-column: 1/8;
+}
+.todo-action{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 1.5em
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
